[r=rvb][bug=][author=huwshimi] Change text colour of messages. Added lines and spacing to settings. Added cluster controller zebra stripes.

--- a/src/maasserver/static/css/components/flash_messages.css
+++ b/src/maasserver/static/css/components/flash_messages.css
@@ -8,8 +8,9 @@
     margin: 0 10px;
     box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
     font-weight: bold;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
-    color: #FFF;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+    color: #000;
+    color: rgba(0, 0, 0, 0.5);
     }
 #flash-messages li:first-child {
     margin-top: 10px;
