--- a/src/maasserver/static/css/modifiers.css
+++ b/src/maasserver/static/css/modifiers.css
@@ -25,6 +25,11 @@ img.icon {
 a.icon:hover {
     text-decoration: none;
     }
+.divider {
+    clear: both;
+    margin: 30px 0;
+    border-top: 1px solid #e5e2e0;
+    }
 /* Spacing */
 .block.space-top-small,
 .space-top-small {
